--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
+    "@types/socket.io": "^3.0.2",
     "express": "^4.17.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
